--- a/application/templates/login-page.html
+++ b/application/templates/login-page.html
@@ -28,72 +28,7 @@
 
 <body class="login-page sidebar-collapse">
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
-    <div class="container">
-        <div class="dropdown button-dropdown">
-            <a href="#pablo" class="dropdown-toggle" id="navbarDropdown" data-toggle="dropdown">
-                <span class="button-bar"></span>
-                <span class="button-bar"></span>
-                <span class="button-bar"></span>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-header">Dropdown header</a>
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">One more separated link</a>
-            </div>
-        </div>
-        <div class="navbar-translate">
-            <a class="navbar-brand" href="https://demos.creative-tim.com/now-ui-kit/index.html" rel="tooltip"
-               title="Designed by Invision. Coded by Creative Tim" data-placement="bottom" target="_blank">
-                Now Ui Kit
-            </a>
-            <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation"
-                    aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-bar top-bar"></span>
-                <span class="navbar-toggler-bar middle-bar"></span>
-                <span class="navbar-toggler-bar bottom-bar"></span>
-            </button>
-        </div>
-        <div class="collapse navbar-collapse justify-content-end" id="navigation"
-             data-nav-image="../assets/img/blurred-image-1.jpg">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Back to Kit</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/creativetimofficial/now-ui-kit/issues">Have an
-                        issue?</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
-                       href="https://twitter.com/CreativeTim" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                        <p class="d-lg-none d-xl-none">Twitter</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom"
-                       href="https://www.facebook.com/CreativeTim" target="_blank">
-                        <i class="fab fa-facebook-square"></i>
-                        <p class="d-lg-none d-xl-none">Facebook</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom"
-                       href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                        <p class="d-lg-none d-xl-none">Instagram</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+
 <!-- End Navbar -->
 <div class="page-header clear-filter" filter-color="orange">
     <div class="page-header-image" style="background-image:url(../assets/img/login.jpg)"></div>
@@ -115,8 +50,7 @@
                       <i class="now-ui-icons users_circle-08"></i>
                     </span>
                                 </div>
-                                <input type="text" class="form-control" placeholder={{ form.username.lable }}>
-                                
+                                {{ form.username(size=20, class="form-control", placeholder=form.username.description) }}
 
                             </div>
                             <div class="input-group no-border input-lg">
@@ -125,59 +59,18 @@
                       <i class="now-ui-icons text_caps-small"></i>
                     </span>
                                 </div>
-                                <input type="text" placeholder="Last Name..." class="form-control"/>
+                                {{ form.password(size=32, class="form-control", placeholder=form.password.description) }}
                             </div>
                         </div>
                         <div class="card-footer text-center">
-                            <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Get Started</a>
-                            <div class="pull-left">
-                                <h6>
-                                    <a href="#pablo" class="link">Create Account</a>
-                                </h6>
-                            </div>
-                            <div class="pull-right">
-                                <h6>
-                                    <a href="#pablo" class="link">Need Help?</a>
-                                </h6>
-                            </div>
+                            {{ form.submit(class="btn btn-primary btn-round btn-lg btn-block") }}
+
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<footer class="footer">
-    <div class=" container ">
-        <nav>
-            <ul>
-                <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
-                    </a>
-                </li>
-                <li>
-                    <a href="http://presentation.creative-tim.com">
-                        About Us
-                    </a>
-                </li>
-                <li>
-                    <a href="http://blog.creative-tim.com">
-                        Blog
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <div class="copyright" id="copyright">
-            &copy;
-            <script>
-                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-            </script>
-            , Designed by
-            <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-        </div>
-    </div>
-</footer>
 </div>
 <!--   Core JS Files   -->
 <script src="../assets/js/core/jquery.min.js" type="text/javascript"></script>
